--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:textSize="36sp"
         android:fontFamily="sans-serif-light"
+        android:padding="20dp"
         android:textColor="@android:color/white"
         android:text="@string/happy_birthday" />
 
@@ -27,6 +28,7 @@
         android:layout_alignParentBottom="true"
         android:textSize="36sp"
         android:textColor="@android:color/white"
+        android:padding="20dp"
         android:fontFamily="sans-serif-light"
         android:text="From, Cristian"/>
 
